# cbor-codec

./: .travis.yml  CHANGELOG.txt  Cargo.toml  README.asciidoc  index.html
benches/: lib.rs
doc/: search-index.js
doc/byteorder/: enum.BigEndian.html  enum.Error.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html  type.Result.html
doc/cbor/: index.html  sidebar-items.js
doc/cbor/decoder/: enum.DecodeError.html  fn.maybe.html  fn.opt.html  fn.or_break.html  index.html  struct.BytesIter.html  struct.Config.html  struct.Decoder.html  struct.GenericDecoder.html  struct.Kernel.html  struct.TextIter.html  type.DecodeResult.html  type.TypeInfo.html
doc/cbor/encoder/: enum.EncodeError.html  index.html  struct.Encoder.html  struct.GenericEncoder.html  type.EncodeResult.html
doc/cbor/random/: fn.gen_value.html  index.html  sidebar-items.js
doc/cbor/skip/: index.html  trait.Skip.html
doc/cbor/slice/: enum.ReadSliceError.html  index.html  trait.ReadSlice.html
doc/cbor/types/: enum.Tag.html  enum.Type.html  index.html
doc/cbor/value/: enum.Bytes.html  enum.Int.html  enum.Key.html  enum.Simple.html  enum.Text.html  enum.Value.html  fn.check.html  index.html  sidebar-items.js  struct.Cursor.html
doc/implementors/rand/: trait.Rng.js
doc/log/: index.html  macro.debug!.html  macro.error!.html  macro.info!.html  macro.log!.html  macro.log_enabled!.html  macro.trace!.html  macro.warn!.html
doc/quickcheck/: fn.empty_shrinker.html  fn.quickcheck.html  fn.single_shrinker.html  index.html  sidebar-items.js  struct.QuickCheck.html  struct.StdGen.html  struct.TestResult.html  trait.Arbitrary.html  trait.Gen.html  trait.Rng.html  trait.Testable.html
doc/rand/: fn.random.html  fn.sample.html  index.html  struct.AsciiGenerator.html  struct.Closed01.html  struct.Generator.html  struct.Open01.html  trait.Rng.html  trait.SeedableRng.html
src/: arbitraries.rs  decoder.rs  encoder.rs  lib.rs  random.rs  read_slice.rs  slice.rs  types.rs  value.rs  values.rs
tests/: arbitrary.rs  lib.rs  properties.rs  tests.rs  unit.rs  util.rs  values.rs
tests/properties/: mod.rs  value.rs
(+54 files in other folders)
