[package]
name        = "cbor-codec"
version     = "0.1.0"
authors     = ["Toralf Wittner <tw@dtex.org>"]
license     = "MPL-2.0"
description = "CBOR Codec implementation"
homepage    = "https://github.com/twittner/cbor-codec"
repository  = "git@github.com:twittner/cbor-codec.git"
keywords    = ["cbor", "encoding", "binary"]

[lib]
name = "cbor"

[dependencies]
byteorder = "> 0.3.0"

[dev-dependencies]
quickcheck        = "> 0.2.0"
quickcheck_macros = "> 0.2.0"
rand              = "> 0.3.0"
rustc-serialize   = "> 0.3.0"
serde             = "> 0.4.0"
serde_macros      = "> 0.4.0"

[[test]]
name = "tests"
