[package]
name          = "cbor-codec"
version       = "0.2.0"
authors       = ["Toralf Wittner <tw@dtex.org>"]
license       = "MPL-2.0"
description   = "CBOR Codec implementation"
repository    = "https://github.com/twittner/cbor-codec"
documentation = "https://twittner.github.io/cbor-codec/doc/cbor/"
keywords      = ["cbor", "encoding", "binary"]

[lib]
name = "cbor"

[dependencies]
byteorder = "> 0.3.0"
libc      = "> 0.1.0"

[dev-dependencies]
quickcheck        = ">= 0.2.21"
quickcheck_macros = ">= 0.2.21"
rustc-serialize   = ">  0.3.0"

[[test]]
name = "tests"
path = "tests/lib.rs"
